tests/sksl/errors/BinaryTypeCoercion.dsl.glsl
### Compilation failed:

error: type mismatch: '=' cannot operate on 'half', 'float'

error: type mismatch: '=' cannot operate on 'half', 'float'

error: type mismatch: '*=' cannot operate on 'half', 'float'

error: type mismatch: '=' cannot operate on 'half4', 'float4'

error: type mismatch: '=' cannot operate on 'half4', 'float4'

error: type mismatch: '*=' cannot operate on 'half4', 'float4'

error: type mismatch: '=' cannot operate on 'half4', 'float4'

error: type mismatch: '=' cannot operate on 'half4', 'float4'

error: type mismatch: '=' cannot operate on 'half4', 'float4'

error: type mismatch: '=' cannot operate on 'half4', 'float4'

error: type mismatch: '*=' cannot operate on 'half4', 'float'

error: type mismatch: '=' cannot operate on 'half4', 'float4'

error: type mismatch: '=' cannot operate on 'half4', 'float4'

error: type mismatch: '=' cannot operate on 'half4', 'float4'

error: type mismatch: '=' cannot operate on 'half4', 'float4'

error: type mismatch: '*=' cannot operate on 'half4', 'float4x4'

error: type mismatch: '=' cannot operate on 'half4x4', 'float4x4'

error: type mismatch: '=' cannot operate on 'half4x4', 'float4x4'

error: type mismatch: '*=' cannot operate on 'half4x4', 'float4x4'

error: type mismatch: '*=' cannot operate on 'float4x4', 'float4'

20 errors
